--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_BACKEND_URL=https://editor-socket.adaptable.app/
+REACT_APP_BACKEND_URL3=https://editor-socket.adaptable.app/
+REACT_APP_BACKEND_URL=https://editorbackend-pa8m.onrender.com
+REACT_APP_BACKEND_URL2=http://localhost:5002
