--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
+    "@mui/x-data-grid": "^6.18.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "codemirror": "^5.65.2",
     "express": "^4.18.2",
     "piston-client": "^1.0.2",
@@ -25,7 +27,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "npm run build && npm run server:prod",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
