--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.6.2",
     "codemirror": "^5.65.2",
     "express": "^4.18.2",
+    "framer-motion": "^11.0.5",
     "piston-client": "^1.0.2",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
