--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.4"
@@ -34,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server:dev": "nodemon server.js",
+    "server:dev": "nodemon main.js",
     "server:prod": "node server.js"
   },
   "eslintConfig": {
